tests/invalid_code/maximum_local_variables.out
tests/invalid_code/maximum_local_variables.bs:2:1: error: function `main` exceeded the maximum number of local variables allowed (200)
